k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forum-api
  namespace: forum
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: forum-api
  template:
    metadata:
      labels:
        app: forum-api
    spec:
      containers:
        - name: forum-api
          image: mpratyush54/forum-backend:backend-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
          readinessProbe:
            httpGet:
              path: /metrics
              port: 3010
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: 3010
            initialDelaySeconds: 15
            periodSeconds: 20
