k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forum-api
  namespace: forum
spec:
  selector:
    app: forum-api
  ports:
    - port: 80
      targetPort: 3010
