k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forum-frontend-ingress
  namespace: forum
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
spec:
  ingressClassName: nginx
  rules:
    - host: recalibrating.capskengeri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forum-frontend
                port:
                  number: 80
